# python-sample-app

./: .gitignore  .pypirc  Makefile  README.md  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  test-output.xml
src/: __init__.py
src/model/: random_model.py
tests/model/: test_random_model.py
