[tool.poetry]
name = "python-sample-app"
version = "0.1.0"
description = "Example python app"
authors = ["Martin <mkrieken@gmail.com>"]
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "2.11.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "0.13.2"
pyright = "1.1.405"
pytest-cov = "7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"